[code]
[b]v1.9.2[/b]: [url=https://bitbucket.org/so-rose/convmlv/src]https://bitbucket.org/so-rose/convmlv/src[/url]
[size=8pt]*Atadenoise Support! It's a great denoising method, used with "-N <A>-<B>" See the documentation for how to configure A and B values.[/size]
[size=8pt]*General FFMPEG Filter Support: The framework for any ffmpeg -vf filters exists now! lut3d and atadenoise are currently implemented.[/size]
[size=8pt]*Bug Fixes: LUTs can now be applied to EXR's! Other bugs fixed too.[/size]

[b]v1.9.1[/b]: [url=https://bitbucket.org/so-rose/convmlv/src]https://bitbucket.org/so-rose/convmlv/src[/url]
[size=8pt]*Fully Supported Config Files! Check the help page; all options for which this makes sense can be specified in global, local, or file-specific config files.[/size]
[size=8pt]*File-Specific Blocks: With this, just make one config file w/any special options per file, and you're done. Huge time saver in production situations![/size]
[size=8pt]*Create Darkframes: You no longer have to create your averaged .darkframe files yourself. 'convmlv -R df <MLV FILE>' creates a file named df.darkframe; -F develops using it.[/size]
[size=8pt]*DNG Improvements: It works now (that's nice :) ), but settings.txt is also created properly now. Plus, bug fixes abound![/size]

[b]v1.9.0[/b]: [url=https://bitbucket.org/so-rose/convmlv/src]https://bitbucket.org/so-rose/convmlv/src[/url]
[size=8pt]*Sane Argument Parsing! You can now choose to use spaces![/size]
[size=8pt]*DNG: Multithreaded mlv_dump with progress bar![/size]
[size=8pt]*Config File: Can now use a global config file in $HOME/convmlv.conf with select options. More to come later![/size]
[size=8pt]*Misc: Auto threads on Linux, use s and e in frame range, better help, more error checking/bug fixes.[/size]

[b]v1.8.1[/b]: [url=https://bitbucket.org/so-rose/convmlv/src]https://bitbucket.org/so-rose/convmlv/src[/url]