@@ -4,7 +4,6 @@ CONFIG_NAME atadenoise-test
 
 ### <------------------ BASIC OPTIONS ------------------>
 OUTDIR ./raw_conv
-#RES_PATH /home/sofus/subhome/src/convmlv
 
 MLV_DUMP /home/sofus/subhome/src/convmlv/mlv_dump
 RAW_DUMP /home/sofus/subhome/src/convmlv/raw2dng
@@ -17,35 +16,51 @@ PYTHON python3
 #~ THREADS 1
 
 ### <------------------ OUTPUT OPTIONS ------------------>
-#~ IMAGE
+IMAGE
 IMG_FMT 0
 
-MOVIE
+#~ MOVIE
 
-PROXY 0
-#~ PROXY_SCALE 50%
+#~ PROXY 3
+PROXY_SCALE 50%
 
 KEEP_DNGS
 
-FRAME_RANGE 300-350
 #~ UNCOMP
 
 ### <------------------ RAW OPTIONS ------------------>
-DEMO_MODE 2
+DEMO_MODE 3
 
-HIGHLIGHT_MODE 0
-#~ TEMP_NOISE 0.15-0.04
-#~ HQ_NOISE 7-7:5-5
+#~ CHROMA_SMOOTH 1
+HIGHLIGHT_MODE 7
+#~ TEMP_NOISE 0.1-0.04
+HQ_NOISE 3-2:3-4
 REM_NOISE 1-1-1-1
 
-SPACE 3
+SPACE 0
 
 ### <------------------ COLOR OPTIONS ------------------>
 
 WHITE 1
+SHARP 7:5:5:3
 
 ### <------------------ FEATURE OPTIONS ------------------>
 #~ DESHAKE
 
-#DARKFRAME ./df.darkframe
-#~ LUT /home/sofus/subhome/src/convmlv/test_footage/girl_lut_test.cube
+DARKFRAME /home/sofus/subhome/src/convmlv/darkframes_7D/f2.8_iso2500_crop1080.darkframe
+BADPIXEL_PATH ./7D_badpixels.txt
+
+
+/ test_girl_noise
+	LUT /home/sofus/subhome/src/convmlv/test_footage/girl_lut_test.cube
+	FRAME_RANGE 456
+*
+
+/ M03-1714
+	FRAME_RANGE 10-50
+*
+
+/ short
+	WHITE 0
+*
+
