@@ -14,7 +14,7 @@ SRANGE /home/sofus/subhome/src/convmlv/sRange.py
 BAL /home/sofus/subhome/src/convmlv/balance.py
 PYTHON python3
 
-THREADS 7
+#THREADS 7
 
 ### <------------------ OUTPUT OPTIONS ------------------>
 IMAGE
@@ -50,6 +50,7 @@ SPACE 3
 
 WHITE 0
 
+SHARP 7:3:0:0
 #LUT lut.cube
 
 #SATPOINT 15000
