@@ -1,15 +1,3 @@
-# convmlv #
-
-MLV/RAW/DNG to Image/Movie and Proxy
-=======
-See [http://www.magiclantern.fm/forum/index.php?topic=16799.0](http://www.magiclantern.fm/forum/index.php?topic=16799.0) for more info.
-
-**The pdf found in the source, under docs->docs.pdf, is very outdated. Use the help text below.**
-
-Help page is below:
-
-```text
-
 Usage:
 	./convmlv.sh [FLAGS] [OPTIONS] files
 	
@@ -221,5 +209,3 @@ CONFIG FILE:
 
 
 Contact me with any feedback or questions at convmlv@sofusrose.com, or PM me (so-rose) on the ML forums!
-
-```
